# TeiaCareImage

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py
.github/actions/shell/: action.yml
.github/workflows/: build.yml  docs.yml
cmake/: examples.cmake  options.cmake
image/: CMakeLists.txt  conanfile.txt
image/examples/: example.cpp  example_image_draw.cpp  example_image_io.cpp  example_image_preprocessing.cpp  example_image_resize.cpp  image_data_path.hpp.in
image/include/teiacare/image/: image_buffer.hpp  image_color.hpp  image_draw.hpp  image_io.hpp  image_processing.hpp  image_resize.hpp  img.hpp  version.hpp
image/src/: image_color.cpp  image_draw.cpp  image_io.cpp  image_resize.cpp  img.cpp  version.cpp.in
image/tests/: image_data_path.hpp.in  test_image_color.cpp  test_image_draw.cpp  test_image_io.cpp  test_image_processing.cpp  test_image_resize.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
